# reaclaw

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRICTION_REPORT.md  LICENSE  NOTICE  PHASE1_LOG.md  README.md  ReaClaw_COVERAGE_REPORT.md  ReaClaw_Design.md  ReaClaw_IDEAS.md  ReaClaw_IMPLEMENTATION_CHECKLIST.md  ReaClaw_README.md  ReaClaw_REAPER_API_ANALYSIS.md  ReaClaw_ROADMAP.md  ReaClaw_TECH_DECISIONS.md  SECURITY.md  config.example.json  config.example.yaml
.claude/skills/reaper/: LEARNED.md  SKILL.md  events-tail.sh  rc  warmup.sh
.claude/skills/release/: SKILL.md
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/runner-image/: Dockerfile
.github/workflows/: build-runner-image.yml  ci.yml
cmake/: embed_file.cmake  toolchain-mingw64.cmake
demos/: README.md
demos/feist-session/: Feist_Recording_Session.rpp
demos/scripts/: ci_smoke_test.py  gen_groove.py  gen_postpunk.py  icons_show.py  lib.py  post.py  post_fxauto.py  post_industrial.py  post_jazz.py  post_postpunk.py  post_stretch.py  post_zoom.py  record.sh  show.py  show_fxauto.py  show_industrial.py  show_jazz.py  show_midi.py  show_postpunk.py  show_stretch.py  show_zoom.py  smf.py
deploy/runner/: values.yaml
deploy/scripts/: install-runner.sh
docs/: AGENT_GUIDE.md  API.md  DEPLOYMENT.md  EXAMPLES.md  MCP.md  NETWORK_AUDIO_NOTES.md  SCRIPTING.md
docs/research/: SWS_DEEP_DIVE.md
mcp/: README.md  pyproject.toml  requirements.txt
mcp/reaclaw_mcp/: __init__.py  client.py  server.py
scripts/: fetch-vendor-deps.sh  install-agent-skill.sh  install-git-hooks.sh  release.sh
scripts/checks/: build.sh  format.sh  test.sh
skill/reaclaw/: SKILL.md
src/: app.h  main.cpp
src/auth/: auth.cpp  auth.h
src/config/: config.cpp  config.h
src/db/: db.cpp  db.h
src/handlers/: analysis.cpp  analysis.h  capabilities.cpp  capabilities.h  catalog.cpp  catalog.h  chunk.cpp  chunk.h  colorutil.h  common.h  events.cpp  events.h  execute.cpp  execute.h  fx.cpp  fx.h  fx_internal.h  guide.cpp  guide.h  handler_util.h  hints.cpp  hints.h  history.cpp  history.h  items.cpp  items.h  learning.cpp  learning.h  midi.cpp  midi.h  probe.cpp  probe.h  project.cpp  project.h  reastream.cpp  reastream.h  recipes.cpp  recipes.h  render.cpp  render.h  (+20 more)
src/panel/: dialogs.cpp  dialogs.h  dialogs.rc  menu.cpp  menu.h  panel.cpp  panel.h  panel.rc  resource.h  swell_stub.cpp
src/reaper/: api.cpp  api.h  catalog.cpp  catalog.h  csurf.cpp  csurf.h  executor.cpp  executor.h  native_actions.gen.h  scripts.cpp  scripts.h
src/server/: router.cpp  router.h  server.cpp  server.h
src/streaming/: registry.cpp  registry.h
src/util/: dsp.h  image.cpp  image.h  jsondiff.h  logging.cpp  logging.h  midi_util.h  music.h  subprocess.cpp  subprocess.h  tls.cpp  tls.h  x11_capture.cpp  x11_capture.h
tests/: CMakeLists.txt  placeholder_test.cpp  test_auth.cpp  test_config.cpp  test_db.cpp  test_dsp.cpp  test_guide.cpp  test_image.cpp  test_jsondiff.cpp  test_logging.cpp  test_midi.cpp  test_music.cpp
tools/: README.md  gen_native_actions.py  native_actions.tsv
