[project]
name = "reaclaw-mcp"
version = "0.1.0"
description = "MCP server exposing ReaClaw (REAPER control) as typed tools, with semantic action search."
requires-python = ">=3.9"
dependencies = ["mcp>=1.2.0", "numpy>=1.24"]

[project.scripts]
reaclaw-mcp = "reaclaw_mcp.server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["reaclaw_mcp"]
